replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/06_string_literal_cast.su
// Expected error: AKA0111 - casting a string literal to a vector.
// String to vector must go through embed(), not a cast.

function vector Bad() {
    return (vector) "cat";
}
